@@ -10,3 +10,4 @@ Please see http://www.poissonboltzmann.org/pdb2pqr/release-history
  * Fixed apbs input file to match what web interface produces.
  * Added stderr and stdout to web error page. 
  * Fixed user specified mobile ion species not being passed to apbs input file.
+ * Removed ambiguous A, ADE, C, CYT, G, GUA, T, THY, U, URA as possible residue names.
